Bootstrap option to enable workspace module parent hierarchy initialization